# aoc2022

./: .gitignore  Cargo.toml  Makefile
src/: day.rs  lib.rs  main.rs  run.rs
src/solutions/: !notes.txt  day1.rs  day2.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
